--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -21,12 +21,13 @@ nav {
   padding: 1rem 0;
   justify-content: space-evenly;
 }
-.links h3 {
-  cursor: pointer;
+.links a {
+  font-size: 1.2rem;
+  text-decoration: none;
+  color: var(--black);
+  font-weight: bold;
 }
-.links h3:hover {
-  opacity: 0.8;
-}
+
 .hamburger {
   width: 35px;
   height: 40px;
